More code cleanup. Uses Java 21